cli/tests/snapshot/snapshots/snapshot__eval_stderr_record_forall_constraints_typecheck.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: multiple record row declarations
  ┌─ [INPUTS_PATH]/errors/record_forall_constraints_typecheck.ncl:3:88
  │
3 │ let f | forall r. { ; r } -> { x: Number; r } = fun r => %record_insert% "x" r 1 in (f { x = 0 } : _)
  │                                                                                        ^^^^^^^^^ this expression
  │
  = Found an expression with the row `x : _a`
  = But this row appears inside another record type, which already has a diffent declaration for the field `x`
  = A type cannot have two conflicting declarations for the same row

note: while matching types
 = Expected type { ; r }
 = With inferred type { x : _a }


